--- a/ExpenseTracker/ExpenseTracker/Pages/Index.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/Index.razor
@@ -1,8 +1,9 @@
 ﻿@page "/"
 
-<h1>Salut!</h1>
 
-<NavLink class="btn btn-primary" href="/ToDo">/ToDo</NavLink>
+<NavMenu />
+
+<h1>Home</h1>
 
 @code {
 
