Tema 2.1 - Prima baza de date generata cu EF Core

--- a/ExpenseTracker/ExpenseTracker/Pages/Categories.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/Categories.razor
@@ -1,5 +1,6 @@
 ﻿@page "/categories"
 @using ExpenseTracker.Data
+@using ExpenseTracker.Data.Models
 @using Microsoft.AspNetCore.Components.Forms
 
 <NavMenu />
