--- a/ExpenseTracker/ExpenseTracker/Pages/NavMenu.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/NavMenu.razor
@@ -8,9 +8,13 @@
         <NavLink class="nav-link" href="categories" Match="NavLinkMatch.All">
             <span class="oi oi-list-rich" aria-hidden="true"></span> Categories
         </NavLink>
+        <NavLink class="nav-link" href="expenses" Match="NavLinkMatch.All">
+            <span class="oi oi-check" aria-hidden="true"></span> Expenses
+        </NavLink>
         <NavLink class="nav-link" href="todo" Match="NavLinkMatch.All">
             <span class="oi oi-check" aria-hidden="true"></span> ToDo
         </NavLink>
+
     </div>
 </nav>
 
