--- a/ExpenseTracker/ExpenseTracker/Pages/NavMenu.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/NavMenu.razor
@@ -11,6 +11,9 @@
         <NavLink class="nav-link" href="expenses" Match="NavLinkMatch.All">
             <span class="oi oi-check" aria-hidden="true"></span> Expenses
         </NavLink>
+        <NavLink class="nav-link" href="incomes" Match="NavLinkMatch.All">
+            <span class="oi oi-check" aria-hidden="true"></span> Incomes
+        </NavLink>
         <NavLink class="nav-link" href="todo" Match="NavLinkMatch.All">
             <span class="oi oi-check" aria-hidden="true"></span> ToDo
         </NavLink>
