Tema 4.1 - Raport cheltuieli si venituri

--- a/ExpenseTracker/ExpenseTracker/Pages/AddIncome.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/AddIncome.razor
@@ -5,7 +5,8 @@
 @inject IncomeService IncomeService
 @inject NavigationManager Nav
 
-<h3>Add Income</h3>
+<NavMenu />
+<h1>Add Income</h1>
 
 <EditForm Model="newIncome" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
