--- a/ExpenseTracker/ExpenseTracker/Pages/EditIncome.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/EditIncome.razor
@@ -5,7 +5,8 @@
 @inject IncomeService IncomeService
 @inject NavigationManager Nav
 
-<h3>Edit Income</h3>
+<NavMenu />
+<h1>Edit Income</h1>
 
 @if (income == null)
 {
