--- a/ExpenseTracker/ExpenseTracker/Pages/Incomes.razor
+++ b/ExpenseTracker/ExpenseTracker/Pages/Incomes.razor
@@ -5,6 +5,7 @@
 @using System.Linq
 @using System.Globalization
 
+<NavMenu/>
 <h1>Incomes</h1>
 
 <a class="btn btn-success mb-3" href="/incomes/add">Add Income</a>
